# knode

./: README.md  pyproject.toml
src/knode/: __init__.py  aws.py  cli.py  kubectl.py  nodes.py
tests/: test_cli.py
